feat: implement UI for showing a single task

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -15,6 +15,7 @@
 	--light-grey-background: #f4f7fd;
 	--sidebar-background: #ffffff;
 	--lines-color: #e4ebfa;
+    --checkbox-background: ;
 }
 
 /* Define styles for the root window with dark - mode preference */
