feat: implement the UI for the mobile sidebar

--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -15,7 +15,7 @@
 	--light-grey-background: #f4f7fd;
 	--sidebar-background: #ffffff;
 	--lines-color: #e4ebfa;
-    --checkbox-background: ;
+	--add-column-background: linear-gradient(180deg, #e9effa 0%, rgba(233, 239, 250, 0.5) 100%);
 }
 
 /* Define styles for the root window with dark - mode preference */
@@ -30,4 +30,5 @@
 
 	--secondary-color: #fff;
 	--secondary-color-hover: #fff;
+	--add-column-background: linear-gradient(180deg, rgba(43, 44, 55, 0.25) 0%, rgba(43, 44, 55, 0.13) 100%);
 }
