chore: implement the UI for login page and layout for auth

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -94,6 +94,10 @@ $text-transformations: capitalize, uppercase;
 	color: var(--destructive-color);
 }
 
+.primary-color-text {
+	color: var(--primary-color);
+}
+
 .hide-on-desktop {
 	display: block;
 
