feat: implement logic for login/signup, notifications ui

--- a/assets/scss/base/_animations.scss
+++ b/assets/scss/base/_animations.scss
@@ -24,3 +24,14 @@
 .fade-leave-to {
 	opacity: 0;
 }
+
+.slideDown-enter-active,
+.slideDown-leave-active {
+    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+.slideDown-enter-from,
+.slideDown-leave-to {
+    opacity: 0;
+    transform: translateY(-10rem);
+}
