--- a/assets/scss/base/_animations.scss
+++ b/assets/scss/base/_animations.scss
@@ -27,11 +27,15 @@
 
 .slideDown-enter-active,
 .slideDown-leave-active {
-    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+	transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
 
-.slideDown-enter-from,
+.slideDown-enter-from {
+	opacity: 0;
+	transform: translateY(-10rem);
+}
+
 .slideDown-leave-to {
-    opacity: 0;
-    transform: translateY(-10rem);
+	opacity: 0;
+	transform: translateY(10rem);
 }
